src/test/deca/context/valid/provided/hello-world.deca
// Description:
//      Programme minimaliste utilisant println
//
// Resultats:
//      Hello, world!

{
        println("Hello, world!");
}
