src/test/deca/context/invalid/renduInitial/03typeError.deca
{
	int x ;
	x="hello" ;
	println(x);
}